[package]
name = "junior_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
sha256 = "1.1"
