[package]
name = "ripple"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ripple"
path = "src/main.rs"

[lib]
name = "ripple"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
sha256 = "1.1"
secp256k1 = "0.28"
ripemd = "0.1"
sha2 = "0.10"
bs58 = "0.5"
rand = "0.8"
k256 = "0.13"  # ECDSA implementation for XRPL
ed25519-dalek = "2.0"
